force-app/main/default/objects/WhatsApp_Session__c/WhatsApp_Session__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Session</label>
    <pluralLabel>WhatsApp Sessions</pluralLabel>
    <nameField>
        <label>Session No</label>
        <type>AutoNumber</type>
        <displayFormat>WS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Per-phone conversation state for the WhatsApp ordering bot. One record per client phone number; holds the current stage and cart while an order is being built.</description>
</CustomObject>