force-app/main/default/objects/WhatsApp_Session__c/fields/Cart_JSON__c.field-meta.xml
<CustomField>
    <fullName>Cart_JSON__c</fullName>
    <label>Cart JSON</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>In-progress cart as JSON: [{brand, packetType, price, qty, max}].</description>
</CustomField>