force-app/main/default/objects/WhatsApp_Session__c/fields/Last_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Id__c</fullName>
    <label>Last Message Id</label>
    <type>Text</type>
    <length>128</length>
    <description>WhatsApp message id last processed for this phone — used to ignore Meta webhook retry duplicates.</description>
</CustomField>