force-app/main/default/objects/WhatsApp_Session__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
    <description>Client phone, last 10 digits only. External ID so the bot can upsert session state by phone.</description>
</CustomField>