force-app/main/default/objects/WhatsApp_Session__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Text</type>
    <length>20</length>
    <description>Bot conversation stage: MENU, QTY, CONFIRM.</description>
</CustomField>